[package]
name = "labyrinth_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usvg = "0.31.0"
clap = { version = "4.2.1", features = ["derive"] }
labyrinth_model = { path = "../labyrinth_model" }
labyrinth_renderer = { path = "../labyrinth_renderer" }
