[package]
name = "labyrinth_leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.2.5", features = ["stable"] }
labyrinth_model = { path = "../labyrinth_model", features = ["serde"] }
labyrinth_renderer = { path = "../labyrinth_renderer" }
usvg = { workspace = true }
getrandom = { version = "*", features = ["js"] }

[package.metadata.leptos]
style-file = "./index.css"
